[package]
name = "bose_einstein"
version = "0.1.0"
edition = "2024"
authors = ["Milkey Mouse <milkeymouse@meme.institute>"]
description = "A data structure that efficiently partitions elements into two sets"
repository = "https://github.com/milkey-mouse/bose_einstein"
license = "CC0-1.0"
keywords = ["collection", "container", "data-structure", "partition", "no-std"]
categories = ["data-structures", "no-std"]

[dev-dependencies]
rand = "0.8"
